# panel-components

./: .gitignore  README.md  pyproject.toml  script.py  setup.cfg  setup.py
src/panel_components/ant/: ant_component.py  component.py
tasks/: test.py
test_results/cov_html/: d_00876bc3345fb88f___init___py.html  d_00876bc3345fb88f_fluent_button_py.html  d_00876bc3345fb88f_fluent_widget_py.html  d_0c5dc6f801da38b6___init___py.html  d_0c5dc6f801da38b6_fast_component_py.html  d_1627a30161059164___init___py.html  d_1627a30161059164_html_component_py.html  d_26ca6f790a5d091d___init___py.html  d_26ca6f790a5d091d_component_py.html  d_2aefdc009598c4e8___init___py.html  d_2aefdc009598c4e8_material_button_py.html  d_2aefdc009598c4e8_material_widget_py.html  d_3e6414dff3c52ff3___init___py.html  d_3e6414dff3c52ff3_fast_button_py.html  d_3e6414dff3c52ff3_fast_widget_py.html  d_4c5e298bd5e1ad8d___init___py.html  d_4c5e298bd5e1ad8d_ant_button_py.html  d_4c5e298bd5e1ad8d_ant_widget_py.html  d_5955e42a40e9419b___init___py.html  d_5955e42a40e9419b_shoelace_component_py.html  d_60a2b8e97ab04d7c___init___py.html  d_60a2b8e97ab04d7c_button_py.html  d_60a2b8e97ab04d7c_widget_py.html  d_65bdce4ad5632d73___init___py.html  d_65bdce4ad5632d73_button_py.html  d_65bdce4ad5632d73_widget_py.html  d_90ad5fa5d6bb7d65___init___py.html  d_90ad5fa5d6bb7d65_wired_button_py.html  d_90ad5fa5d6bb7d65_wired_widget_py.html  d_948b79b6a0aeeab4___init___py.html  d_948b79b6a0aeeab4_wired_component_py.html  d_95f51a2a21b03d39___init___py.html  d_95f51a2a21b03d39_component_py.html  d_a0f0cf3891c1cfa5___init___py.html  d_a0f0cf3891c1cfa5_fluent_component_py.html  d_abc46b4bd4ccd818___init___py.html  d_abc46b4bd4ccd818_bootstrap_button_py.html  d_abc46b4bd4ccd818_bootstrap_widget_py.html  d_ae83a45b733d8c37___init___py.html  d_ae83a45b733d8c37_material_component_py.html  (+14 more)
tests/: test_component.py  test_component_generator.py  test_react_component.py  test_react_generator.py  test_web_component_generator.py
(+60 files in other folders)
