[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pylint.design]
max-attributes=12
max-args=10

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "invoke.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "setuptools.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "pkg_resources.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "param.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "panel.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "bokeh.*"
ignore_missing_imports = true


# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
junit_family = "legacy"
python_files = ["tests.py","test_*.py","*_tests.py"]
markers = [
    "unittest", # Small, isolated test
    "integration_test", # A test towards some external system or service. For example a database
    "functionaltest", # Large potentially non-isolated test requiring access to external services
    "slow", # A slow test. Skip normally. But run this when you have the time.
]
