[metadata]
name = panel_components
version = 0.0.1
author = Marc Skov Madsen
author_email = marc.skov.madsen@gmail.com
description = Library of components for Panel
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    panel

[options.packages.find]
where = src

[options.extras_require]
test = pytest